new: POST /import is working (#19)
[PFE-16]
- new: can create a new VM from /import route
- test: test_api_import is working
- ref: huge refactoring on vboxmanage package.
Architecture has changed to make easier the creation of new
VBoxManage command and it directives
- new: creation of vboxmanage.import builder. Works!
- ref: having self._options in VBoxManageDirective allows
us to override an option already set and have it unique.
- test: test_import is OK
- fix: issues on fastAPI due to VBoxManageBuilder changes.
- fix: issues on 'container' mode due to VBoxManageBuilder changes.
- new: import web route. Enable to create an instance of a given ovf
- fix: works in 'container' mode. Update timeout
